# Synth-tiseur-

./: README.md
app/: gui.c  main.c  meson.build
data/: Lune.txt  game.txt  input.txt  mario.txt
include/: custom_math.h
src/: common.h  custom_math.c  meson.build  oscillators.c  oscillators.h  wav_writer.c  wav_writer.h
tests/: test_custom_math.c
